--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
   "name": "@w11k/eslint-config",
-  "version": "0.0.7",
+  "version": "0.0.9",
   "description": "eslint config user at W11K",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jsdoc": "30.7.6",
-    "eslint-plugin-prefer-arrow": "1.2.2",
-    "eslint-plugin-rxjs": "^2.1.5",
-    "@typescript-eslint/eslint-plugin": "4.3.0",
-    "@typescript-eslint/parser": "4.3.0",
     "@angular-eslint/eslint-plugin": "0.8.0-beta.3",
     "@angular-eslint/eslint-plugin-template": "0.8.0-beta.3",
-    "@angular-eslint/template-parser": "0.8.0-beta.3"
+    "@angular-eslint/template-parser": "0.8.0-beta.3",
+    "@typescript-eslint/eslint-plugin": "4.3.0",
+    "@typescript-eslint/parser": "4.3.0",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jsdoc": "^30.7.6",
+    "eslint-plugin-prefer-arrow": "1.2.2",
+    "eslint-plugin-rxjs": "^2.1.5"
   },
   "peerDependencies": {
     "eslint": ">= 3"
