--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@w11k/eslint-config",
-  "version": "0.0.11",
+  "version": "0.0.12",
   "description": "eslint config user at W11K",
   "main": "index.js",
   "scripts": {
@@ -10,8 +10,8 @@
     "@angular-eslint/eslint-plugin": "0.8.0-beta.3",
     "@angular-eslint/eslint-plugin-template": "0.8.0-beta.3",
     "@angular-eslint/template-parser": "0.8.0-beta.3",
-    "@typescript-eslint/eslint-plugin": "4.3.0",
-    "@typescript-eslint/parser": "4.3.0",
+    "@typescript-eslint/eslint-plugin": "^4.25.0",
+    "@typescript-eslint/parser": "^4.25.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsdoc": "^30.7.6",
     "eslint-plugin-prefer-arrow": "1.2.2",
