--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@w11k/eslint-config",
-  "version": "0.0.13",
+  "version": "0.1.0",
   "description": "eslint config user at W11K",
   "main": "index.js",
   "scripts": {
@@ -12,6 +12,7 @@
     "@angular-eslint/template-parser": "0.8.0-beta.3",
     "@typescript-eslint/eslint-plugin": "^4.25.0",
     "@typescript-eslint/parser": "^4.25.0",
+    "eslint": "^7.27.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsdoc": "^30.7.6",
     "eslint-plugin-prefer-arrow": "1.2.2",
